git ne peut pas push de secrets

--- a/config/config.yml
+++ b/config/config.yml
@@ -1,2 +1,2 @@
 environment:
-  - GITHUB_ACCESS_TOKEN: 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
+# - GITHUB_ACCESS_TOKEN: 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
