--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+# TODO
 ---
 x-airflow-common: &airflow-common
   image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.8.1-python3.11}
@@ -18,7 +19,10 @@ x-airflow-common: &airflow-common
     AIRFLOW__CORE__DAGBAG_IMPORT_TIMEOUT: 600
 
 
-    _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:- pymongo dagshub mlflow scikit-learn tqdm gitpython pandas}
+    _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:- pymongo dagshub mlflow scikit-learn tqdm gitpython pandas airflow-prometheus} # check availability of airflow-prometheus
+    # Add Prometheus connection ID # TODO: check whether this is ok
+    AIRFLOW__PROMETHEUS__PROMETHEUS_CONNECTION_ID: "prometheus_default"  # TODO: Replace with your connection ID
+
   volumes: #TO WATCH: modify to right paths and necessary scripts and data
     - ./airflow/dags:/opt/airflow/dags
     - ./airflow/logs:/opt/airflow/logs
@@ -114,6 +118,8 @@ services:
     ports:
       - "8000:8000"  # Map FastAPI port
     environment:
+      - AIRFLOW_USERNAME=${_AIRFLOW_WWW_USER_USERNAME:-airflow}
+      - AIRFLOW_PASSWORD=${_AIRFLOW_WWW_USER_PASSWORD:-airflow}
       - PROMETHEUS_PORT=9090
       - API_HOST=0.0.0.0
       - API_PORT=8000  # Map the port of the host to container
@@ -134,6 +140,17 @@ services:
     networks:
       - monitoring
     restart: always
+
+  alertmanager:
+      image: prom/alertmanager:latest
+      container_name: alertmanager
+      ports:
+        - "9093:9093"
+      volumes:
+        - .prometheus/alertmanager/alertmanager.yml:/etc/alertmanager/alertmanager.yml
+      networks:
+        - monitoring
+      restart: always
 
   grafana:
     image: grafana/grafana:latest
